created boxes on home

--- a/src/components/common/common.css
+++ b/src/components/common/common.css
@@ -3,7 +3,7 @@
     flex: 1;
     flex-direction: column;
     padding: 20px;
-    background-color: lightgrey;
+    background-color: #e5e5e5;
 }
 
 .header-top {
